rule_engine/rcm-client-app/src/app/billing-claims/billing-claims.component.scss
/* ... */
.for-hide-btn {

    .page-heading {
        margin-top: 20px;
    }

    .steps-taken {
        margin-top: 0px;
    }

    .claim-steps-btn {
        top: 70px !important;
    }

}

@keyframes animateleft {
    from {
        right: 0;
        opacity: 1
    }

    to {
        right: -300px;
        opacity: 0
    }
}

@keyframes animateright {
    from {
        right: -300px;
        opacity: 0
    }

    to {
        right: 0;
        opacity: 1
    }
}

.row-grey {
    background-color: lightgray !important;
}

.notes-modal {
    .modal-dialog {
        max-width: 850px;
        margin: 1.75rem auto;
    }

    display: block !important;

    .modal-content {
        padding: 0px;
        width: 100%;

        .close {
            font-size: 25px;
        }
    }

}

.pdf-viewer {

    border-top: 1px solid #ccc;
    background: #eee;

    .pdf-action-box {
        background: #ddd;
        display: flex;
        justify-content: space-between;
        vertical-align: middle;
        padding-bottom: 10px;
        margin-bottom: 20px;
        border-bottom: 1px solid #ccc;
        padding-top: 10px;

        .pdf-search-box {
            display: flex;

            .form-control {
                width: 300px;
            }
        }

        .zoom-action {
            .btn {
                margin-right: 10px;
            }
        }
    }
}

.mutliselect.is-invalid {
    border-color: #dc3545;
    border: 1px solid #dc3545;
    border-radius: 0.25rem;
}

.current-billing-heading,
.validation-recreate-heading {
    font-size: 16px;
    font-weight: 600;
    margin-bottom: 10px;
    margin-top: -15px;
    background: lightgray;
    padding: 5px 10px;
}

.validation-recreate-heading {

    margin-top: 5px;

}

.validate-btn {
    min-width: 130px;
    height: 38px;
    margin-left: 5px;
}

.multi-action span {
    display: inline-block;
    margin-right: 3px;
}

.multi-action span:last-child {
    display: none;
}

.attach-secondary-width {
    min-width: 148px;
}

.rsType-1 {
    color: green;
}

.rsType-2 {
    color: red;
}

.rsType-3 {
    color: red;
}

.loader-save-data {
    width: 10px;
    height: 10px;
    border-radius: 50%;
    display: block;
    margin: 15px 0;
    color: #FFF;
    left: calc(50% - 5px);
    box-sizing: border-box;
    animation: shadowRolling 2s linear infinite;
}

.claim-detail-fixed {
    position: sticky;
    top: 50px;
    background: #f8f8f9;
    z-index: 9999;
    margin-left: -20px;
    padding-left: 35px;
    margin-top: -10px;
    height: 68px;
}

.attach-secondary {
    display: inline-flex;
    align-items: center;
    margin-right: 50px;
    font-weight: 700 !important;
    color: #212529 !important;
    white-space: nowrap;

    input {
        margin-right: 7px;
        width: 15px;
        height: 15px;
    }
}


.is-invalid {
    .pml_dp {
        border-color: #dc3545 !important;
    }
}

.claimDatepicker {
    width: 100%;

    .datepicker-container {
        width: 100%;

        &:after {
            content: "";
            position: absolute;
            background: url('../../assets/img/calendar-icon.png') no-repeat 1px 6px;
            top: 5px;
            right: 6px;
            width: 22px;
            height: 22px;
        }

        input {
            font-size: 14px;
            height: 38px;
            padding: .375rem .75rem;
            font-weight: 400;
            line-height: 1.5;
            color: #495057;
            background-color: #fff !important;
            background-clip: padding-box;
            border: 1px solid #ced4da;
            border-radius: .25rem;
            width: 100%;

        }

        .calendar-container {
            top: 40px !important;
            width: 250px !important;
        }
    }

    &.dp-disable {
        pointer-events: none;

        .pml_dp {
            background-color: #E9ECEf !important;
        }
    }
}

.multiselect {

    .detail-page-service-codes .drop-toggle,
    .detail-page-required-rebilling .drop-toggle {
        background-color: #E9ECEf !important;
    }
}

.dpWidth {
    .pml_dp {
        min-width: 150px;
    }
}

.dp-disable {
    pointer-events: none;
}

.currentAction {
    padding-bottom: 10px;
    padding-left: 8px;
    font-size: 16px;
    font-weight: 700;
    padding-top: 10px;
    display: flex;
    color: #333;

    label {
        font-size: 16px;
        font-weight: 700;
        color: #333;
        margin-right: 5px;
    }
}

a.Edit {
    background: url('../../assets/img/edit-gray.png') no-repeat left;
    background-color: #e1e1e1;
    font-size: 14px;
    border-radius: 10px;
    padding: 1px 8px 1px 25px;
    font-weight: 500;
    display: inline-flex;
    align-items: center;
    background-position: 7px;
    margin-left: 3px;
}

a.Read {
    background: url('../../assets/img/eye_icon.png') no-repeat left;
    background-color: #e1e1e1;
    font-size: 14px;
    border-radius: 10px;
    padding: 1px 8px 1px 28px;
    font-weight: 500;
    display: inline-flex;
    align-items: center;
    background-position: 7px;
    margin-left: 3px;
}

.alert-message {
    display: flex;
    align-items: center;
}

.btn-align-right {
    display: flex;
    justify-content: flex-end;
    width: 100%;
}



.actPerform {
    border: 0px !important;

    &.actError {
        border: 1px solid #dc3545 !important;
        border-radius: 5px;
    }

    label {
        font-weight: normal !important;
        font-family: "Lato", sans-serif;
        line-height: normal;
        text-align: left;
        font-size: 14px;
        padding: 6px 6px 6px 26px !important;
        color: #778080 !important;
    }
}

.next-action-error {
    margin-right: 10px;
    float: right;
    line-height: normal;
    padding-top: 2px;
}

.tooltip2 {
    position: relative;
    height: auto !important;
    display: inline-block;
}
/* ... */

